# how-to-cognite-function-extr-pipeline-config

./: README.md  pyproject.toml
sine_function/: README.md  function_config.yaml  handler.py  requirements.txt
sine_function/schedules/: main.yaml
tests/sine_function_test/: local_test_sine_function.py
